--- a/index.html
+++ b/index.html
@@ -62,6 +62,13 @@
                     <p>Endereço: Rua das flores, 123</p>
             </td>
         </tr>  
+        <tr>
+            <td colspan="4" bgcolor="white" align="center">
+
+            <h3>Todos os direitos reservados</h3>
+            </td>
+            </tr>
+
     </table>
     
 </body>
